# chess-ai-agent

./: .gitignore  .pylintrc  README.md  pyproject.toml
app/: agent.py  chess_helper.py  llm.py  llm_resource.py  main.py  prompts.py  resource.py
app/static/css/: styles.css
app/static/js/: chessboard.js
app/templates/: index.html
